--- a/en/index_en.html
+++ b/en/index_en.html
@@ -315,6 +315,89 @@
     </div>
   </section>
 
+  <section class="w-full" id="discount">
+    <div class="px-6 mx-auto max-w-7xl lg:px-8">
+      <div class="max-w-4xl mx-auto text-center">
+        <h2 class="text-base font-semibold leading-7 text-accent">Special offers</h2>
+        <p class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">Great discounts for you</p>
+      </div>
+
+      <p class="max-w-2xl mx-auto mt-6 text-lg leading-8 text-center text-gray-600">We offer special discounts for students and a referral program for members who bring new members. If you're interested, contact us and we'll explain everything.</p>
+
+      <div class="grid max-w-3xl grid-cols-1 gap-8 mx-auto mt-12 lg:grid-cols-2">
+        <!-- Student discount -->
+        <div class="flex flex-col justify-between p-8 bg-white rounded-2xl ring-1 ring-gray-200">
+          <div>
+            <div class="flex items-center justify-between gap-x-4">
+              <h3 class="text-lg font-semibold leading-8 text-gray-900">Student Discount</h3>
+              <span class="inline-flex items-center px-3 py-1 text-sm font-medium rounded-full bg-accent/10 text-accent">-100 Kč</span>
+            </div>
+
+            <p class="mt-4 text-sm leading-6 text-gray-600">Students receive a 100 Kč discount on membership. Contact us and after verifying your student status we will issue a promo code.</p>
+
+            <ul role="list" class="mt-6 space-y-3 text-sm leading-6 text-gray-600">
+              <li class="flex gap-x-3">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+                </svg>
+                100 Kč discount after verifying student status.
+              </li>
+              <li class="flex gap-x-3">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+                </svg>
+                Discount applies for as long as the membership is active.
+              </li>
+            </ul>
+          </div>
+
+          <div class="mt-8">
+            <a href="contact_en.html" class="justify-center px-4 py-2 text-sm font-semibold text-white rounded-md bg-accent hover:bg-accent-600">Contact us</a>
+            <a href="mailto:olympiagymcz@gmail.com?subject=Student%20Discount" class="ml-4 text-sm font-medium leading-6 text-gray-700 underline">Send email</a>
+          </div>
+        </div>
+
+        <!-- Referral program -->
+        <div class="flex flex-col justify-between p-8 bg-white rounded-2xl ring-1 ring-gray-200">
+          <div>
+            <div class="flex items-center justify-between gap-x-4">
+              <h3 class="text-lg font-semibold leading-8 text-gray-900">Referral Program</h3>
+              <span class="px-3 py-1 text-sm font-medium rounded-full bg-accent/10 text-accent">-100 Kč/member</span>
+            </div>
+
+            <p class="mt-4 text-sm leading-6 text-gray-600">Active members receive a 100 Kč discount for each new member they refer. The discount applies while the referred member remains active.</p>
+
+            <ul role="list" class="mt-6 space-y-3 text-sm leading-6 text-gray-600">
+              <li class="flex gap-x-3">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+                </svg>
+                100 Kč discount for each verified new member.
+              </li>
+              <li class="flex gap-x-3">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+                </svg>
+                Discounts can be combined. Yes, you can end up training for free.
+              </li>
+               <li class="flex gap-x-3">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+                </svg>
+                When purchasing membership for a new member, please provide the existing member's email.
+              </li>
+            </ul>
+          </div>
+
+          <div class="mt-8">
+            <a href="contact_en.html" class="justify-center px-4 py-2 text-sm font-semibold text-white rounded-md bg-accent hover:bg-accent-600">Contact us</a>
+            <a href="mailto:olympiagymcz@gmail.com?subject=Referral%20Program" class="ml-4 text-sm font-medium leading-6 text-gray-700 underline">Send email</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section id="faq">
     <div class="px-6 py-16 mx-auto max-w-7xl sm:py-24 lg:px-8">
       <h2 class="text-2xl font-bold leading-10 tracking-tight text-gray-900">
