--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
         <a href="contact.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
       </div>
       <div class="flex items-center justify-end gap-x-2 grow shrink-0 basis-1/3">
-        <a href="en/index_en.html"
-          class="text-sm font-semibold leading-6 text-white">EN<span aria-hidden="true">🇬🇧</span></a>
+        <a href="en/index_en.html" class="text-sm font-semibold leading-6 text-white">EN<span
+            aria-hidden="true">🇬🇧</span></a>
         <a href="https://billing.stripe.com/p/login/4gw4k7dK80WC6Z2eUU"
-          class="rounded-md bg-accent px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-accent-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600">Správa členství<span aria-hidden="true">&rarr;</span></a>
+          class="rounded-md bg-accent px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-accent-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600">Správa
+          členství<span aria-hidden="true">&rarr;</span></a>
       </div>
     </nav>
   </header>
@@ -169,7 +170,7 @@
   <section class="w-full py-24 sm:py-32" id="clenstvi">
     <div class="px-6 mx-auto max-w-7xl lg:px-8">
       <div class="max-w-4xl mx-auto text-center">
-  <h2 class="text-base font-semibold leading-7 text-accent">
+        <h2 class="text-base font-semibold leading-7 text-accent">
           Možnosti členství
         </h2>
         <p class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">
@@ -178,7 +179,7 @@
       </div>
       <p class="max-w-2xl mx-auto mt-6 text-lg leading-8 text-center text-gray-600">
         Jsme privátní fitness centrum, které je otevřeno 24/7. Abychom mohli nabídnout maximální pohodlí a bezpečí,
-        neumožňujeme vstup do centra bez předchozí registrace a zaplacení členství. Díky tomu můžeme zajistit, že
+        neumožňujeme vstup do centra bez předchozí registrace, zaplacení členství a vstupní prohlídky. Díky tomu můžeme zajistit, že
         fitness centrum nebude přeplněné a bude dostatek prostoru pro všechny.
       </p>
       <div
@@ -197,8 +198,7 @@
             </p>
             <ul role="list" class="mt-8 space-y-3 text-sm leading-6 text-gray-600">
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
-                  aria-hidden="true">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
                     clip-rule="evenodd" />
@@ -206,8 +206,7 @@
                 Vstup Vám bude umožněn po předchozí telefonické domluvě.
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
-                  aria-hidden="true">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
                     clip-rule="evenodd" />
@@ -215,8 +214,7 @@
                 Domluvený termín jednorázového vstupu je možné zrušit nejpozději 24 hodin předem, jinak vstup propadá.
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
-                  aria-hidden="true">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
                     clip-rule="evenodd" />
@@ -237,26 +235,33 @@
                 Vstup do fitness centra s trenérem
               </h3>
             </div>
-            <p class="mt-4 text-sm leading-6 text-gray-600">60minutový trénink pod vedením zkušeného trenéra včetně vstupu do fitness</p>
+            <p class="mt-4 text-sm leading-6 text-gray-600">60minutový trénink pod vedením zkušeného trenéra včetně
+              vstupu do fitness</p>
             <p class="flex items-baseline mt-6 gap-x-1">
               <span class="text-4xl font-bold tracking-tight text-gray-900">1000 Kč</span>
             </p>
             <ul role="list" class="mt-8 space-y-3 text-sm leading-6 text-gray-600">
               <li class="flex gap-x-3">
                 <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                  <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+                  <path fill-rule="evenodd"
+                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                    clip-rule="evenodd" />
                 </svg>
                 Trenér se vám ozve a domluví si s vámi termín tréninku
               </li>
               <li class="flex gap-x-3">
                 <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                  <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+                  <path fill-rule="evenodd"
+                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                    clip-rule="evenodd" />
                 </svg>
                 S sebou obuv ktera nepřišla do kontaktu s venkovním prostředím a ručník.
               </li>
             </ul>
           </div>
-          <a href="https://buy.stripe.com/aEU7t71Ea9eNd9e6os" aria-describedby="tier-single-entry-trainer" class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center rounded-md text-accent focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600 ring-1 ring-inset ring-accent-600 hover:ring-accent-600">Stát se členem</a>
+          <a href="https://buy.stripe.com/aEU7t71Ea9eNd9e6os" aria-describedby="tier-single-entry-trainer"
+            class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center rounded-md text-accent focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600 ring-1 ring-inset ring-accent-600 hover:ring-accent-600">Stát
+            se členem</a>
         </div>
         <div
           class="flex flex-col justify-between p-8 bg-white rounded-3xl ring-1 ring-gray-200 xl:p-10 lg:mt-8 lg:rounded-l-none">
@@ -275,8 +280,7 @@
             </p>
             <ul role="list" class="mt-8 space-y-3 text-sm leading-6 text-gray-600">
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
-                  aria-hidden="true">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
                     clip-rule="evenodd" />
@@ -284,8 +288,7 @@
                 S sebou obuv ktera nepřišla do kontaktu s venkovním prostředím a ručník.
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
-                  aria-hidden="true">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
                     clip-rule="evenodd" />
@@ -293,8 +296,7 @@
                 Samoobslužný vstup.
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
-                  aria-hidden="true">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
                     clip-rule="evenodd" />
@@ -302,8 +304,7 @@
                 Pokud se vám u nás nebude líbit, <br> můžete do 24 hodin zrušit členství bez jakéhokoli poplatku.
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor"
-                  aria-hidden="true">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd"
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
                     clip-rule="evenodd" />
@@ -319,6 +320,113 @@
       </div>
     </div>
   </section>
+
+  <section class="w-full" id="discount">
+    <div class="px-6 mx-auto max-w-7xl lg:px-8">
+      <div class="max-w-4xl mx-auto text-center">
+        <h2 class="text-base font-semibold leading-7 text-accent">Speciální nabídky</h2>
+        <p class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">Výhodné slevy pro vás</p>
+      </div>
+
+      <p class="max-w-2xl mx-auto mt-6 text-lg leading-8 text-center text-gray-600">Nabízíme výhodné slevy pro studenty
+        a věrnostní program pro členy, kteří přivedou nové členy. Máte-li zájem, kontaktujte nás a rádi vše vysvětlíme.</p>
+
+      <div class="grid max-w-3xl grid-cols-1 gap-8 mx-auto mt-12 lg:grid-cols-2">
+        <!-- Student discount -->
+        <div class="flex flex-col justify-between p-8 bg-white rounded-2xl ring-1 ring-gray-200">
+          <div>
+            <div class="flex items-center justify-between gap-x-4">
+              <h3 class="text-lg font-semibold leading-8 text-gray-900">Studentská sleva</h3>
+              <span
+                class="inline-flex items-center px-3 py-1 text-sm font-medium rounded-full bg-accent/10 text-accent">-100
+                Kč</span>
+            </div>
+
+            <p class="mt-4 text-sm leading-6 text-gray-600">Studenti získají slevu 100 Kč na členství. Kontaktujte nás a
+              po doložení studentského průkazu vám vystavíme promo kód.</p>
+
+            <ul role="list" class="mt-6 space-y-3 text-sm leading-6 text-gray-600">
+              <li class="flex gap-x-3">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd"
+                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                    clip-rule="evenodd" />
+                </svg>
+                Sleva 100 Kč po ověření studentského statusu.
+              </li>
+              <li class="flex gap-x-3">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd"
+                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                    clip-rule="evenodd" />
+                </svg>
+                Sleva platí po celou dobu, kdy je členství aktivní.
+              </li>
+            </ul>
+          </div>
+
+          <div class="mt-8">
+            <a href="contact.html"
+              class="justify-center px-4 py-2 text-sm font-semibold text-white rounded-md bg-accent hover:bg-accent-600">Kontaktovat
+              nás</a>
+            <a href="mailto:olympiagymcz@gmail.com?subject=Studentská sleva"
+              class="ml-4 text-sm font-medium leading-6 text-gray-700 underline">Napsat email</a>
+          </div>
+        </div>
+
+        <!-- Referral program -->
+        <div class="flex flex-col justify-between p-8 bg-white rounded-2xl ring-1 ring-gray-200">
+          <div>
+            <div class="flex items-center justify-between gap-x-4">
+              <h3 class="text-lg font-semibold leading-8 text-gray-900">Referenční program</h3>
+              <span
+                class="px-3 py-1 text-sm font-medium rounded-full bg-accent/10 text-accent">-100
+                Kč/člen</span>
+            </div>
+
+            <p class="mt-4 text-sm leading-6 text-gray-600">Aktivní členové získají slevu 100 Kč za každého nového
+              člena, kterého přivedou. Sleva se uplatní po dobu, kdy je přivedený člen aktivní.</p>
+
+            <ul role="list" class="mt-6 space-y-3 text-sm leading-6 text-gray-600">
+              <li class="flex gap-x-3">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd"
+                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                    clip-rule="evenodd" />
+                </svg>
+                Sleva 100 Kč za každého ověřeného nového člena.
+              </li>
+              <li class="flex gap-x-3">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd"
+                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                    clip-rule="evenodd" />
+                </svg>
+                Slevy se mohou sčítat. Ano můžete chodit zdarma.
+              </li>
+               <li class="flex gap-x-3">
+                <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd"
+                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                    clip-rule="evenodd" />
+                </svg>
+                Pří nákupu členství pro nového člena je potřeba uvést email stávajícího člena.
+              </li>
+            </ul>
+          </div>
+
+          <div class="mt-8">
+            <a href="contact.html"
+              class="justify-center px-4 py-2 text-sm font-semibold text-white rounded-md bg-accent hover:bg-accent-600">Kontaktovat
+              nás</a>
+            <a href="mailto:olympiagymcz@gmail.com?subject=Studentská sleva"
+              class="ml-4 text-sm font-medium leading-6 text-gray-700 underline">Napsat email</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <section id="faq">
     <div class="px-6 py-16 mx-auto max-w-7xl sm:py-24 lg:px-8">
@@ -419,10 +527,10 @@
   <button id="to-top-button" onclick="goToTop()" title="Go To Top"
     class="fixed z-50 hidden p-4 text-lg font-semibold text-white transition-colors duration-300 border-0 rounded-full shadow-md bg-accent bottom-10 left-10 w-14 h-14 hover:bg-accent-600">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
-        <path d="M12 4l8 8h-6v8h-4v-8H4l8-8z" />
+      <path d="M12 4l8 8h-6v8h-4v-8H4l8-8z" />
     </svg>
     <span class="sr-only">Go to top</span>
-</button>
+  </button>
 </body>
 
 <script>
@@ -432,22 +540,22 @@
   // Check if the button exists
   if (toTopButton) {
 
-      // On scroll event, toggle button visibility based on scroll position
-      window.onscroll = function() {
-          if (document.body.scrollTop > 500 || document.documentElement.scrollTop > 500) {
-              toTopButton.classList.remove("hidden");
-          } else {
-              toTopButton.classList.add("hidden");
-          }
-      };
+    // On scroll event, toggle button visibility based on scroll position
+    window.onscroll = function () {
+      if (document.body.scrollTop > 500 || document.documentElement.scrollTop > 500) {
+        toTopButton.classList.remove("hidden");
+      } else {
+        toTopButton.classList.add("hidden");
+      }
+    };
 
-      // Function to scroll to the top of the page smoothly
-      window.goToTop = function() {
-          window.scrollTo({
-              top: 0,
-              behavior: 'smooth'
-          });
-      };
+    // Function to scroll to the top of the page smoothly
+    window.goToTop = function () {
+      window.scrollTo({
+        top: 0,
+        behavior: 'smooth'
+      });
+    };
   }
 </script>
 
